fix: elimina bypass de verificacao de email e account takeover via OAuth
- Registro: nao retorna mais JWT antes de confirmar email
- OAuth: nao auto-linka conta local com mesmo email
- CORS: origem configurada via application.yml (nao mais hardcoded)
- Spring Security: logging reduzido de DEBUG para INFO
- Frontend URL default: 4200 -> 3000 (Next.js)